--- a/index.html
+++ b/index.html
@@ -4,6 +4,12 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;600;700&family=Raleway:wght@700&display=swap"
+      rel="stylesheet"
+    />
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body>
@@ -15,15 +21,25 @@
       </a>
       <nav clas="header-nav">
         <ul class="header-list">
-          <li class="header-item"><a href="">About</a></li>
-          <li class="header-item"><a href="">Services and prices</a></li>
-          <li class="header-item"><a href="">Barbers</a></li>
-          <li class="header-item"><a href="">Contacts</a></li>
+          <li class="header-item">
+            <a class="header-link link" href="">About</a>
+          </li>
+          <li class="header-item">
+            <a class="header-link link" href="">Services and prices</a>
+          </li>
+          <li class="header-item">
+            <a class="header-link link" href="">Barbers</a>
+          </li>
+          <li class="header-item">
+            <a class="header-link link" href="">Contacts</a>
+          </li>
         </ul>
       </nav>
 
       <a class="header-contact" href="tel:+380441111111">+38 044 111 11 11</a>
-      <button class="header-button" type="button">Online-booking</button>
+      <button class="header-button btn btn-theme-dark" type="button">
+        Online-booking
+      </button>
     </header>
     <main>
       <!-- Hero  -->
@@ -31,7 +47,7 @@
         <ul class="hero-list">
           <li class="hero-item">
             <a
-              class="hero-link"
+              class="hero-link link"
               href="https://www.instagram.com/"
               target="_blank"
               rel="noopener noreferrer"
@@ -40,7 +56,7 @@
           </li>
           <li class="hero-item">
             <a
-              class="hero-link"
+              class="hero-link link"
               href="https://www.youtube.com/"
               target="_blank"
               rel="noopener noreferrer"
@@ -71,7 +87,7 @@
         </ul>
       </section>
       <!-- About us -->
-      <section>
+      <section class="about-section">
         <ul>
           <li>
             <img
@@ -99,10 +115,10 @@
           If you want to add more confidence to your image, you should
           definitely visit us.
         </p>
-        <button type="button">ONLINE-BOOKING</button>
+        <button class="about-btn btn" type="button">ONLINE-BOOKING</button>
       </section>
       <!-- Price -->
-      <section>
+      <section class="price-section">
         <p>Spend your time with the best masters</p>
         <h2>Services and prices</h2>
         <div>
@@ -119,7 +135,9 @@
             <li>Camouflage of gray hair<span></span>from 200 uah.</li>
           </ul>
         </div>
-        <button type="button">online-booking</button>
+        <button class="price-btn btn btn-theme-dark" type="button">
+          online-booking
+        </button>
       </section>
       <!-- Benefits -->
       <section>
